assets/styles/views/Dashboard.css
/* Dashboard */

.dash-container {
  composes: dis-f jc-sb from "../helpers.css";
  margin-top: 3rem;
}

.month-change {
  composes: dis-f jc-sb from "../helpers.css";
  margin-top: 4rem;
}

.spending-form {
  composes: bgc-white dis-f jc-sb c-primary p-1rem mb-1rem from "../helpers.css";
  border: 2px dashed var(--brandPrimary);
  box-shadow: 0 1px 9px 0 #dcdbdb;
}

.spending-form__text {
  composes: dis-f fd-c ta-r from "../helpers.css";
}

.spending-form__text_box {
  height: 40px;
  line-height: 33px;
}

.spending-form__inputs {
  margin-left: 1rem;
  margin-right: 1rem;  
}

